[tool.poetry]
name = "rueo-tool"
version = "0.1.0"
description = ""
authors = ["Alexander Astafiev <alexander.astafiev.1989@gmail.com>"]
readme = "README.md"
packages = [{include = "rueo_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
